# mockbuster

./: .editorconfig  .env.example  .eslintrc.js  .gitignore  .swcrc  Cargo.toml  README.md  docker-compose.yml  manifest.json  package-lock.json  package.json  tsconfig.json  webpack.js
assets/scripts/: index.ts  serviceWorker.ts
consumers/: Cargo.toml  consumers.rs
db_models/: Cargo.toml
kafka/consumers/: Cargo.toml  consumers.rs
kafka/consumers/topics/: comment_create.rs  mod.rs
kafka/producers/: Cargo.toml  kafka-producer.rs  topics.rs
kafka/producers/schemas/: create_comment.rs  mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231017_010052_ratings.rs  m20231226_145143_movies.rs  m20240317_172504_aggregate_ratings.rs  m20240321_234206_create_comments.rs  m20240323_174030_create_notifications.rs  m20240323_181246_create_user_preferences.rs  m20240414_142416_subscriptions.rs
models/: Cargo.toml  events_list_result.rs  lib.rs
models/stubs/: aggregate_ratings.rs  comment.rs  events_list_result.rs  mod.rs  notifications.rs  rating.rs  user.rs  user_preferences.rs
models/tmdb/: mod.rs  movie_search_result.rs
models/tmdb_movies/: movie_id_result.rs  movie_search_result.rs
nginx/: nginx.conf
operations/: Cargo.toml  operations.rs
operations/aggregate_ratings/: fetch.rs  list.rs
operations/comments/: create.rs
operations/comments/fetch/: by_id.rs
operations/events/: list.rs
operations/notifications/: fetch.rs
operations/notifications/create/: for_comment_create.rs  mod.rs
operations/ratings/: create.rs  list.rs  mod.rs
operations/ratings/fetch/: by_movie.rs  by_user.rs
operations/tmdb_movies/: fetch.rs
operations/users/: fetch.rs  logout.rs  mod.rs
operations/users/list/: by_new_comment_notification.rs  mod.rs
postgres/: Dockerfile  init.sql
server/: Cargo.toml  server.rs
server/operations/: get_recently_rented_movies.rs  get_tmdb_movie.rs  login.rs  logout.rs  mod.rs  search_tmdb_movies.rs
server/operations/aggregate_ratings/: fetch.rs  list.rs  mod.rs  upsert.rs
server/operations/comments/: create.rs
server/operations/comments/fetch/: by_tmdb_id.rs  mod.rs
server/operations/ratings/: count.rs  create.rs  list.rs  mod.rs  summed.rs
server/operations/ratings/fetch/: by_movie.rs  by_user_and_movie.rs  mod.rs
server/operations/subscriptions/: create.rs
server/operations/tmdb_movies/: fetch.rs  search.rs
server/operations/users/: fetch.rs  login.rs  mod.rs
server/routes/: mod.rs
server/routes/comment/: post.rs
server/routes/home/: get.rs
server/routes/login/: get.rs  post.rs
server/routes/logout/: post.rs
server/routes/movie/: get.rs  post.rs
server/routes/profile/: get.rs
server/routes/recently_rented/: get.rs
server/routes/search/: get.rs  post.rs
server/routes/subscribe/: post.rs
server/routes/top_ten/: get.rs
server/utils/: consumer.rs  document.rs  mod.rs  producer.rs
validators/: Cargo.toml  search_dto.rs  validators.rs
validators/ratings/: mod.rs  recently_rented_dto.rs
validators/tmdb_movies/: search_dto.rs
validators/users/: get_profile_dto.rs  login_form.rs  mod.rs
views/components/: App.rs  Cargo.toml  Header.rs  Logo.rs  MovieCard.rs  comment.rs  comment_card.rs  comment_entry.rs  frame.rs  lib.rs  page_title.rs  pagination.rs  rating_bar.rs  sidebar.rs  user_badge.rs  vote_modal.rs
views/home_view/: Cargo.toml  homeView.ts  home_view.rs
views/home_view/src/: home_view.rs
views/login_view/: Cargo.toml  loginView.ts  login_view.rs
views/login_view/src/: login_view.rs
views/movie_view/: Cargo.toml  movieView.ts
views/movie_view/src/: lib.rs  movie_view.rs
views/movie_view/src/_components/: mod.rs
views/movie_view/src/components/: comment_card.rs  mod.rs  scores_card.rs  stats_card.rs
views/profile_view/: Cargo.toml  profileView.ts
views/profile_view/src/: lib.rs  profile_view.rs
views/recently_rented_view/: Cargo.toml  recentlyRentedView.ts
views/recently_rented_view/src/: card.rs  lib.rs  recently_rented_view.rs
views/search_view/: Cargo.toml  searchView.ts
views/search_view/src/: lib.rs  search_view.rs
views/top_ten_view/: Cargo.toml  topTenView.ts
views/top_ten_view/src/: lib.rs  top_ten_view.rs
zookeeper/: jaas.conf
