[workspace]
members = [
  "./migration",
  "./db_models",
  "./models",
  "./server",
  "./validators",
  "./views/components",
  "./views/home_view",
  "./views/login_view",
  "./views/movie_view",
  "./views/profile_view",
  "./views/recently_rented_view",
  "./views/search_view",
  "./views/top_ten_view",
]
default-members = ["./server"]
resolver = "2"

[workspace.dependencies]
getrandom = { version = "0.2", features = ["js"] }
# openssl = { version = "0.10", features = ["vendored"] }
reqwasm = { version = "0.5.0" }
sea-orm = { version = "0.12.3", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.17.0", features = ["full"] }
validator = { version = "0.16.1", features = ["derive"] }
yew = { version = "0.21.0", features = ["hydration", "csr", "ssr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Event", "EventTarget", "Window"] }

[profile.release]
lto = true
opt-level = 's'
