[workspace]
members = [
  "./validators",
  "./views/components",
  "./views/home_view",
  "./views/login_view",
  "./views/movie_view",
  "./views/profile_view",
  "./views/recently_rented_view",
  "./views/search_view",
  "./views/top_ten_view",
  "./migration",
  "./models",
  "./server",
]
default-members = ["./server"]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
getrandom = { version = "0.2", features = ["js"] }
http-cache-reqwest = "0.13.0"
num-format = "0.4.4"
r2d2 = { version = "0.8.4" }
redis = { version = "0.25.2", features = ["r2d2"] }
reqwasm = { version = "0.5.0" }
reqwest-middleware = "0.2.4"
sea-orm = { version = "0.12.3", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.17.0", features = ["full"] }
validator = { version = "0.16.1", features = ["derive"] }
yew = { version = "0.21.0", features = ["hydration", "csr", "ssr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Event", "EventTarget", "Window"] }

[profile.release]
lto = true
opt-level = 's'