[package]
name = "operations"
version = "0.0.1"
edition = "2021"

[lib]
path = "./operations.rs"

[dependencies]
actix-session = { workspace = true }
kafka-producer = { path = "./../kafka/producers" }
models = { path = "./../models", features = ["db_models"] }
rdkafka = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
sea-orm = { workspace = true }
serde_json = { workspace = true }
validators = { path = "./../validators" }
