[package]
name = "operations"
version = "0.0.1"
edition = "2021"

[lib]
path = "./operations.rs"

[dependencies]
actix-session = { workspace = true }
models = { path = "./../models", features = ["db_models"] }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
web-push = { workspace = true }
validators = { path = "./../validators" }
