[package]
name = "server"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "server"
path = "./server.rs"


[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.8.0", features = ["redis-rs-session"] }
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-web = "4.0.0-rc.1"
chrono = { workspace = true }
models = { path = "./../models", features = ["db_models"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3"
http-cache-reqwest = { workspace = true }
num-format = { workspace = true }
rdkafka = { version = "0.25", features = ["cmake-build"] }
regex = "1.9.6"
reqwest = { version = "0.11.9", features = ["json"] }
reqwest-middleware = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
validator = { workspace = true }
validators = { path = "./../validators" }
home_view = { path = "./../views/home_view" }
login_view = { path = "./../views/login_view" }
movie_view = { path = "./../views/movie_view", features = ["ssr"] }
profile_view = { path = "./../views/profile_view", features = ["ssr"] }
recently_rented_view = { path = "./../views/recently_rented_view", features = [
    "ssr",
] }
search_view = { path = "./../views/search_view" }
top_ten_view = { path = "./../views/top_ten_view", features = ["ssr"] }
r2d2 = { workspace = true }
redis = { workspace = true, features = ["r2d2"] }
web-push = "0.10.1"
web-sys = { workspace = true }
yew = { workspace = true }
