[package]
name = "server"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "server"
path = "./server.rs"


[dependencies]
actix-files = "0.6.2"
actix-session = { workspace = true }
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-web = { workspace = true }
models = { path = "./../models", features = ["db_models"] }
dotenv = { workspace = true }
env_logger = "0.10.0"
http-cache-reqwest = { workspace = true }
operations = { path = "./../operations" }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
validators = { path = "./../validators" }
home_view = { path = "./../views/home_view", features = ["ssr"] }
login_view = { path = "./../views/login_view" }
movie_view = { path = "./../views/movie_view", features = ["ssr"] }
profile_view = { path = "./../views/profile_view", features = ["ssr"] }
recently_rented_view = { path = "./../views/recently_rented_view", features = [
    "ssr",
] }
search_view = { path = "./../views/search_view" }
top_ten_view = { path = "./../views/top_ten_view", features = ["ssr"] }
r2d2 = { workspace = true }
redis = { workspace = true, features = ["r2d2"] }
web-push = { workspace = true }
yew = { workspace = true }
