[package]
name = "kafka_consumers"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "consumers"
path = "./consumers.rs"

[dependencies]
kafka-producer = { path = "./../producers" }
operations = { path = "./../../operations" }
sea-orm = { workspace = true }
rdkafka = { workspace = true }
tokio = { workspace = true }
web-push = { workspace = true }
