[package]
name = "components"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "./lib.rs"

[dependencies]
models = { path = "./../../models" }
reqwasm = { workspace = true }
serde = {workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
validator = { workspace = true }
validators = { path = "./../../validators" }
yew = { workspace = true } 