[package]
name = "login_view"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "./src/lib.rs"

[dependencies]
reqwasm = { version = "0.5.0" }
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
validator = { version = "0.16.1", features = ["derive"] }
validators = { path = "./../../validators" }
yew = { version = "0.21.0", features = ["hydration", "csr", "ssr"] }

