[package]
name = "recently_rented_view"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "./src/lib.rs"

[dependencies]
components = { path = "./../components" }
rust-i18n = "2.2.1"
wasm-bindgen = "0.2"
yew = { version = "0.21.0", features = ["hydration", "csr", "ssr"] }

